<resources>
    <string name="app_name">Football Scores</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="score">0</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="saves">Saves</string>
    <string name="free">Free Kick</string>
    <string name="tackles">Tackle</string>
    <string name="corner">Corner Kick</string>
    <string name="plusOne">+ 1</string>
    <string name="reset">Reset</string>
</resources>
