<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrund"
    tools:context="com.example.android.footballscores.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/backgrund">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/teamA"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:textSize="32sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="#000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/teamB"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:textSize="32sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:onClick="addGoalForA"
                    android:text="@string/plusOne"/>

                <TextView
                    android:id="@+id/txt_teamAGoals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textColor="@color/black"
                    android:textSize="52sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="#000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/goals"
                    android:textColor="@color/white"
                    android:textSize="32sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="#000"/>

                <TextView
                    android:id="@+id/txt_teamBGoals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addGoalForB"
                    android:text="@string/plusOne"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="#000"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addShotForA"
                    android:layout_weight="1"
                    android:text="@string/plusOne"/>

                <TextView
                    android:id="@+id/txt_teamAShots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/shots"
                    android:textColor="@color/white"
                    android:textSize="32sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:id="@+id/txt_teamBShots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addShotForB"
                    android:text="@string/plusOne"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addFreeForA"
                    android:layout_weight="1"
                    android:text="@string/plusOne"/>

                <TextView
                    android:id="@+id/txt_teamAFree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/free"
                    android:textColor="@color/white"
                    android:textSize="28sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:id="@+id/txt_teamBFree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addFreeForB"
                    android:text="@string/plusOne"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addCornerForA"
                    android:layout_weight="1"
                    android:text="@string/plusOne"/>

                <TextView
                    android:id="@+id/txt_teamACorner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/corner"
                    android:textColor="@color/white"
                    android:textSize="28sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:id="@+id/txt_teamBCorner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addCornerForB"
                    android:text="@string/plusOne"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addTackleForA"
                    android:layout_weight="1"
                    android:text="@string/plusOne"/>

                <TextView
                    android:id="@+id/txt_teamATackles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/tackles"
                    android:textColor="@color/white"
                    android:textSize="28sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:id="@+id/txt_teamBTackles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addTackleForB"
                    android:text="@string/plusOne"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addSavesForA"
                    android:layout_weight="1"
                    android:text="@string/plusOne"/>

                <TextView
                    android:id="@+id/txt_teamASaves"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/saves"
                    android:textColor="@color/white"
                    android:textSize="28sp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>

                <TextView
                    android:id="@+id/txt_teamBSaves"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/score"
                    android:textSize="52sp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addSavesForB"
                    android:text="@string/plusOne"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="resetGame"
                android:text="@string/reset"/>



        </LinearLayout>
    </ScrollView>
</LinearLayout>
